# chatLVSM

./: .gitignore  MODULE.bazel  README.md  buildClient.sh  buildDB.sh  buildELCC.sh  buildServer.sh
client/: CMakeLIsts.txt  Client.cpp  Client.hpp  MODULE.bazel  runClient.sh  start_client.cpp
client/lib/: BUILD  Client.cc  Client.h
client/main/: BUILD  start_client.cc
db/: BUILD  README.md  buildDB.sh  build_db.sh
db/chat/: chat.cc  chat.h
db/db/: db.cc  db.h
db/lib/: BUILD  db.cc
db/lib/user/: user.cc  user.h
db/message/: message.cc  message.h
db/user/: user.cc  user.h
elcc/: BUILD  buildELCC.sh
elcc/Blowfish/: Blowfish.cc  Blowfish.h
elcc/ECC/: ECC.cc  ECC.h
elcc/EasyEncryption/: Base64.cc  Base64.h  encrypt.cc  encrypt.h  vigenere.cc  vigenere.h
elcc/Feistel/: Feistel.cc  Feistel.h
elcc/RSA/: RSA.cc  RSA.h
elcc/SHA256/: SHA256.cc  SHA256.h
server/: CMakeLists.txt  MODULE.bazel  Server.cpp  Server.hpp  runServer.sh  start_server.cpp
server/db/: BUILD
server/elcc/3DES/: README.md
server/encryption/: BUILD
server/lib/: BUILD  Server.cc  Server.h  protocol.h
server/main/: BUILD  start_server.cc
